--- a/virola-eko/src/css/index.css
+++ b/virola-eko/src/css/index.css
@@ -4,7 +4,7 @@
 
 /** Frame Related **/
 body {
-    background-color: #7ABECC;
+    background-color: #66CCFF;
     color: #FFFFFF;
     text-align: center;
     text-shadow: 2px 2px 0 #64B1C6;
