--- a/virola-eko/src/css/index.css
+++ b/virola-eko/src/css/index.css
@@ -10,6 +10,7 @@ body {
     text-shadow: 2px 2px 0 #64B1C6;
 }
 
+
 nav ul {
     font-size: 24px;
     padding: 20px;
@@ -143,4 +144,23 @@ a:hover {
     -ms-transform-origin:100% 100%;
     -o-transform-origin:100% 100%;
     transform-origin:100% 100%;
-};
+}
+
+#main article {
+    margin: 20px auto;
+    width: 300px;
+    text-align: left;
+}
+
+#main article h1 {
+    font-size: 24px;
+}
+
+#main article dt {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+#main article dd {
+    margin-bottom: 10px;
+}
