--- a/virola-eko/src/css/style.css
+++ b/virola-eko/src/css/style.css
@@ -10,10 +10,9 @@ div, p {
 }
 
 footer {
+    clear: both;
+    text-align: right;
     line-height: 15px;
-    position: absolute;
-    bottom: 0;
-    right: 20px;
     color: #fff;
     font-weight: bold;
 }
@@ -24,4 +23,51 @@ footer {
     left: 0;
     height: 100%;
     width: 100%;
+}
+
+
+/** Heart Style **/
+.heart {
+    position: relative;
+    width: 100px;
+    height: 90px;
+}
+
+.heart:before,
+.heart:after {
+    position: absolute;
+    content: "";
+    left: 50px;
+    top: 0;
+    width: 50px;
+    height: 80px;
+    background: red;
+    -moz-border-radius:50px 50px 0 0;
+    border-radius:50px 50px 0 0;
+    -webkit-transform:rotate( -45deg );
+    -moz-transform:rotate( -45deg );
+    -ms-transform:rotate( -45deg );
+    -o-transform:rotate( -45deg );
+    transform:rotate( -45deg );
+
+    -webkit-transform-origin:0 100%;
+    -moz-transform-origin:0 100%;
+    -ms-transform-origin:0 100%;
+    -o-transform-origin:0 100%;
+    transform-origin:0 100%;
+}
+
+.heart:after {
+    left: 0;
+    -webkit-transform:rotate( 45deg );
+    -moz-transform:rotate( 45deg );
+    -ms-transform:rotate( 45deg );
+    -o-transform:rotate( 45deg );
+    transform:rotate( 45deg );
+
+    -webkit-transform-origin:100% 100%;
+    -moz-transform-origin:100% 100%;
+    -ms-transform-origin:100% 100%;
+    -o-transform-origin:100% 100%;
+    transform-origin:100% 100%;
 }
