--- a/virola-eko/asset/css/index.css
+++ b/virola-eko/asset/css/index.css
@@ -1,4 +1,206 @@
-
-/* src files */
-@import '../../src/css/style.css';
-@import '../../src/css/index.css';
+/** 
+ * index.css
+ */
+/** Frame Related **/
+body {
+  margin: 0;
+  background-color: #66CCFF;
+  color: #FFFFFF;
+  text-align: center;
+  text-shadow: 2px 2px 0 #64B1C6;
+  font-size: 14px;
+  font-family: "Merriweather Sans", "Hiragino Sans GB", "Microsoft Yahei", sans-serif;
+  line-height: 1.5;
+}
+figure {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+nav ul {
+  font-size: 24px;
+  padding: 20px;
+}
+nav li {
+  display: inline;
+  font-weight: normal;
+}
+a {
+  -webkit-transition: color 0.5s linear 0s;
+  -moz-transition: color 0.5s linear 0s;
+  -ms-transition: color 0.5s linear 0s;
+  -o-transition: color 0.5s linear 0s;
+  transition: color 0.5s linear 0s;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+a:hover {
+  color: #D2EDF7;
+}
+.break {
+  color: #D2EDF7;
+  padding: 0 10px;
+}
+/** Font Related **/
+@font-face {
+  font-family: KristonITC;
+  src: url("../../asset/font/kriston.ttf");
+}
+@font-face {
+  font-family: QuillineScriptThin;
+  src: url("../../asset/font/quilline.TTF");
+}
+.f20 {
+  font-size: 20px;
+}
+.f30 {
+  font-size: 30px;
+}
+.f46 {
+  font-size: 46px;
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+.f60 {
+  font-size: 60px;
+  padding-top: 120px;
+  text-transform: uppercase;
+}
+.f72 {
+  font-size: 72px;
+  text-transform: uppercase;
+}
+.f130 {
+  color: #D2EDF7;
+  font-size: 130px;
+  line-height: 0.9em;
+  text-transform: uppercase;
+}
+.qs {
+  font-family: 'QuillineScriptThin', Arial, Helvetica, sans-serif;
+}
+.kr {
+  font-family: 'KristonITC', Arial, Helvetica, sans-serif;
+}
+.cf {
+  font-family: 'ChunkFiveRegular', Arial, Helvetica, sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.krl {
+  font-family: 'KristonITC', Arial, Helvetica, sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.center-content {
+  margin: 20px auto;
+  width: 300px;
+  text-align: left;
+}
+#main .center-content h1 {
+  font-size: 24px;
+}
+#main .center-content dt {
+  font-size: 14px;
+  font-weight: bold;
+}
+#main .center-content dd {
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+/*-----方块格子区域，当然是想象中的-----*/
+.things {
+  margin: 150px auto;
+  width: 800px;
+  text-align: left;
+}
+.things .box {
+  font-size: 20px;
+  border-radius: 20px;
+  padding: 20px;
+  border: 5px dashed #DDD;
+  margin: 10px;
+}
+.things .box a:hover {
+  background-color: #6DF;
+  text-decoration: underline;
+}
+.things .box figure a {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+}
+.things .box img {
+  display: block;
+  width: 160px;
+}
+.things .box p {
+  color: gray;
+  padding: 10px 20px;
+}
+.things .box p a {
+  line-height: 25px;
+  padding: 10px;
+}
+.box-model {
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: -ms-flexbox;
+  /* Internet Explorer 10 */
+  display: box;
+}
+.box-model .box {
+  -moz-box-flex: 1.0;
+  /* Firefox */
+  -webkit-box-flex: 1.0;
+  /* Safari and Chrome */
+  -ms-flex: 1.0;
+  /* Internet Explorer 10 */
+  box-flex: 1.0;
+}
+@media (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+  nav ul {
+    padding: 0 20px;
+    margin-bottom: 0;
+    font-size: 18px;
+  }
+  nav li {
+    display: block;
+    text-align: left;
+    border-bottom: 1px dotted #fff;
+  }
+  #main .center-content {
+    width: auto;
+    padding: 0 20px;
+  }
+  #main .center-content dt {
+    font-size: 18px;
+  }
+  #main .center-content dd {
+    font-size: 16px;
+  }
+  #main .center-content dd a {
+    font-size: 24px;
+    margin-right: 20px;
+  }
+  .break {
+    display: none;
+  }
+  .things {
+    margin: 0;
+    width: 100%;
+  }
+  .things .box-model {
+    display: block;
+  }
+}
+@media only screen and (min-device-pixel-ratio: 2) {
+  body nav li {
+    display: block;
+  }
+}
